--- a/test/Directory.Build.props
+++ b/test/Directory.Build.props
@@ -4,7 +4,7 @@
 
   <PropertyGroup>
     <AnalysisMode>Default</AnalysisMode>
-    <NoWarn>$(NoWarn);CS1591;CS0618;CS7022;CA1707;CA1822;CA1727;CA2201</NoWarn>
+    <NoWarn>$(NoWarn);CS1591;CS0618;CS7022;CA1707;CA1822;CA1727;CA2201;CA1859</NoWarn>
     <!--
         CS1591: Don't warn for missing XML doc
         CS0618: This is a test project, so we usually continue testing [Obsolete] apis
@@ -12,6 +12,7 @@
         CA1822: Mark members as static
         CA1727: Use PascalCase for named placeholders in the logging message template
         CA2201: Do not raise reserved exception types
+        CA1859: Use concrete types when possible for improved performance
     -->
   </PropertyGroup>
 
