Publish release notes to nuget

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -33,12 +33,17 @@ jobs:
       - name: Install deps
         run: |
           dotnet restore
+      - name: Extract release notes
+        id: extract-notes
+        run: echo "${{ github.event.release.body }}" > RELEASE_NOTES.md
       - name: Build
         run: |
           dotnet build --configuration Release --no-restore -p:Deterministic=true -p:BuildNumber=${{ github.run_number }}
       - name: Pack
         run: |
-          dotnet pack AppLibDotnet.sln --configuration Release --no-restore --no-build -p:Deterministic=true -p:BuildNumber=${{ github.run_number }}
+          dotnet pack AppLibDotnet.sln --configuration Release --no-restore --no-build \
+            -p:Deterministic=true -p:BuildNumber=${{ github.run_number }} \
+            -p:PackageReleaseNotes="$(cat RELEASE_NOTES.md)"
       - name: Versions
         run: |
           dotnet --version
