--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Extract release notes
         id: extract-notes
         run: |
-          echo "Relese notes looks best on github: ${{ github.event.release.html_url }}" > RELEASE_NOTES.md
+          echo "Release notes look best on GitHub: ${{ github.event.release.html_url }}" > RELEASE_NOTES.md
           echo "" >> RELEASE_NOTES.md
           echo "${{ github.event.release.body }}" >> RELEASE_NOTES.md
           cat RELEASE_NOTES.md
