--- a/.github/workflows/publish_pr_package.yml
+++ b/.github/workflows/publish_pr_package.yml
@@ -16,18 +16,19 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
+
+      - name: Build PR release version
+        run: |
+          dotnet tool restore
+          version=$(dotnet minver --tag-prefix v --default-pre-release-identifiers preview.0)+${{ github.event.pull_request.head.sha }}
+          echo "MINVERVERSIONOVERRIDE=$version" >> $GITHUB_ENV
+          echo $version
       - name: Build
         run: |
           dotnet build AppLibDotnet.sln -v m -c Release
       - name: Test
         run: |
           dotnet test AppLibDotnet.sln -v m --no-restore --no-build -c Release
-
-      - name: Build PR release version
-        run: |
-          dotnet tool restore
-          version=$(dotnet minver --tag-prefix v --default-pre-release-identifiers preview.0)+$GITHUB_SHA
-          echo "MINVERVERSIONOVERRIDE=$version" >> $GITHUB_ENV
       - name: Pack PR release
         run: |
           dotnet pack AppLibDotnet.sln -c Release --no-restore --no-build \
