--- a/.github/workflows/publish_pr_package.yml
+++ b/.github/workflows/publish_pr_package.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           dotnet tool restore
           sha=$(echo '${{ github.event.pull_request.head.sha }}' | cut -c1-8)
-          version=$(dotnet minver --tag-prefix v --ignore-height --default-pre-release-identifiers preview.0).$sha
+          version=$(dotnet minver --tag-prefix v --default-pre-release-identifiers preview.0).$sha
           echo "MINVERVERSIONOVERRIDE=$version" >> $GITHUB_ENV
           echo $version
       - name: Build
