Disable renovate for v7

--- a/renovate.json
+++ b/renovate.json
@@ -4,5 +4,5 @@
     "local>Altinn/renovate-config"
   ],
   "labels": ["dependency"],
-  "baseBranches": ["main", "v7"]
+  "baseBranches": ["main"]
 }
