--- a/.github/workflows/pr-actions.yml
+++ b/.github/workflows/pr-actions.yml
@@ -25,14 +25,12 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          dotnet tool restore
           sha=$(gh pr view ${{ github.event.issue.number }} --repo ${{ github.repository }} --json headRefOid | jq -r '.headRefOid' | cut -c1-8)
           branch=$(gh pr view ${{ github.event.issue.number }} --repo ${{ github.repository }} --json headRefName | jq -r '.headRefName' | sed 's/.*\///')
-          minverVersion=$(dotnet minver --tag-prefix v --ignore-height --default-pre-release-identifiers preview.0)
-          if [[ $minverVersion != *"-preview."* && $minverVersion != *"-rc."* ]]; then
-            minverVersion="$minverVersion-preview.0"
-          fi
-          version=$(minverVersion).$branch.$sha
+          version=$(git describe --abbrev=0 --tags 2>/dev/null)
+          version=$(echo $version | cut -d '-' -f 1)
+          version="$version-pr.${{ github.run_number }}.$branch.$sha"
+          version=$(echo $version | sed 's/^v//')
           echo "MINVERVERSIONOVERRIDE=$version" >> $GITHUB_ENV
           echo $version
 
@@ -41,10 +39,10 @@ jobs:
           dotnet build AppLibDotnet.sln -v m -c Release
       - name: Test
         run: |
-          dotnet test AppLibDotnet.sln -v m --no-restore --no-build -c Release
+          dotnet test AppLibDotnet.sln -v m --no-restore --no-build -c Release -p:BuildNumber=${{ github.run_number }}
       - name: Pack PR release
         run: |
-          dotnet pack AppLibDotnet.sln -v m --no-restore --no-build -c Release -p:Deterministic=true
+          dotnet pack AppLibDotnet.sln -v m --no-restore --no-build -c Release -p:Deterministic=true -p:BuildNumber=${{ github.run_number }}
       - name: Versions
         run: |
           dotnet --version
