--- a/src/Altinn.App.Core/Altinn.App.Core.csproj
+++ b/src/Altinn.App.Core/Altinn.App.Core.csproj
@@ -18,10 +18,11 @@
     <PackageReference Include="Altinn.Platform.Models" Version="1.6.1" />
     <PackageReference Include="Altinn.Platform.Storage.Interface" Version="4.0.5" />
     <PackageReference Include="JsonPatch.Net" Version="3.3.0" />
-    <PackageReference Include="JWTCookieAuthentication" Version="3.0.1" />
-    <!-- The following are depencencies for JWTCookieAuthentication, but we need newer versions-->
-    <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="8.3.1"
-    />
+    <!-- <PackageReference Include="JWTCookieAuthentication" Version="3.0.1" /> -->
+    <ProjectReference Include="../../../altinn-authentication/src/jwtcookie/Authentication/Altinn.Common.Authentication.csproj" />
+
+    <!-- The follwoing are depencencies for JWTCookieAuthentication, but we need newer versions-->
+    <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="8.3.1" />
     <PackageReference Include="Microsoft.Rest.ClientRuntime" Version="2.3.24" />
     <PackageReference Include="Microsoft.Rest.ClientRuntime.Azure" Version="3.3.19" />
     <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
