--- a/src/Altinn.App.Core/Altinn.App.Core.csproj
+++ b/src/Altinn.App.Core/Altinn.App.Core.csproj
@@ -5,7 +5,7 @@
     <Description>
       This class library holds all the core features used by a standard Altinn 3 App.
     </Description>
-    <NoWarn>Correspondence001</NoWarn>
+    <NoWarn>ALTINNAPP0200</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
