Fix lots issues with custom generated apidoc
Also we now do all api verification in a single file by using VerifyJson to generate valid json files

--- a/.gitignore
+++ b/.gitignore
@@ -379,4 +379,4 @@ src/Altinn.Apps/AppTemplates/AspNet/App/Properties/launchSettings.json
 .mono/
 
 *.received.txt
-*.recevied.json
+*.received.json
