--- a/src/Altinn.App.Clients.Fiks/Altinn.App.Clients.Fiks.csproj
+++ b/src/Altinn.App.Clients.Fiks/Altinn.App.Clients.Fiks.csproj
@@ -9,8 +9,8 @@
     <ProjectReference Include="..\Altinn.App.Core\Altinn.App.Core.csproj"/>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="KS.Fiks.Arkiv.Forenklet.Arkivering.V1" Version="1.0.1"/>
-<!--    <PackageReference Include="KS.Fiks.Arkiv.Models.V1" Version="1.0.4"/>-->
+<!--    <PackageReference Include="KS.Fiks.Arkiv.Forenklet.Arkivering.V1" Version="1.0.1"/>-->
+    <PackageReference Include="KS.Fiks.Arkiv.Models.V1" Version="1.0.4"/>
     <PackageReference Include="KS.Fiks.IO.Client" Version="5.0.2"/>
   </ItemGroup>
 </Project>
