--- a/src/Altinn.App.Clients.Fiks/Altinn.App.Clients.Fiks.csproj
+++ b/src/Altinn.App.Clients.Fiks/Altinn.App.Clients.Fiks.csproj
@@ -12,5 +12,6 @@
 <!--    <PackageReference Include="KS.Fiks.Arkiv.Forenklet.Arkivering.V1" Version="1.0.1"/>-->
     <PackageReference Include="KS.Fiks.Arkiv.Models.V1" Version="1.0.4"/>
     <PackageReference Include="KS.Fiks.IO.Client" Version="5.0.2"/>
+    <PackageReference Include="Polly.Extensions" Version="8.5.2" />
   </ItemGroup>
 </Project>
