--- a/test/Altinn.App.Clients.Fiks.Tests/Altinn.App.Clients.Fiks.Tests.csproj
+++ b/test/Altinn.App.Clients.Fiks.Tests/Altinn.App.Clients.Fiks.Tests.csproj
@@ -15,14 +15,21 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="coverlet.collector" Version="6.0.0"/>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
-    <PackageReference Include="xunit" Version="2.5.3"/>
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3"/>
+    <PackageReference Include="Verify.Xunit" Version="28.9.0" />
+    <PackageReference Include="Microsoft.FeatureManagement.AspNetCore" Version="4.0.0" />
+    <PackageReference Include="Moq" Version="4.20.72" />
+    <PackageReference Include="xunit" Version="2.9.3" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="3.0.1" />
+    <PackageReference Include="coverlet.collector" Version="6.0.4" />
   </ItemGroup>
 
   <ItemGroup>
     <Using Include="Xunit"/>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Altinn.App.Clients.Fiks\Altinn.App.Clients.Fiks.csproj" />
   </ItemGroup>
 
 </Project>
