--- a/test/Altinn.App.Clients.Fiks.Tests/Altinn.App.Clients.Fiks.Tests.csproj
+++ b/test/Altinn.App.Clients.Fiks.Tests/Altinn.App.Clients.Fiks.Tests.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
+    <PackageReference Include="Polly.Testing" Version="8.5.2" />
     <PackageReference Include="Verify.Xunit" Version="28.9.0" />
     <PackageReference Include="Microsoft.FeatureManagement.AspNetCore" Version="4.0.0" />
     <PackageReference Include="Moq" Version="4.20.72" />
