--- a/src/Altinn.App.Api/Altinn.App.Api.csproj
+++ b/src/Altinn.App.Api/Altinn.App.Api.csproj
@@ -30,7 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Altinn.App.Core\Altinn.App.Core.csproj" />
+    <ProjectReference Include="../Altinn.App.Core/Altinn.App.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
