--- a/test/Altinn.App.Core.Tests/Altinn.App.Core.Tests.csproj
+++ b/test/Altinn.App.Core.Tests/Altinn.App.Core.Tests.csproj
@@ -46,7 +46,7 @@
 
   <ItemGroup>
     <ProjectReference Include="../../src/Altinn.App.Core/Altinn.App.Core.csproj" />
-    <ProjectReference Include="../Altinn.App.Common.Tests/Altinn.App.Common.Tests.csproj" />
+    <ProjectReference Include="../Altinn.App.Tests.Common/Altinn.App.Tests.Common.csproj" />
   </ItemGroup>
 
   <ItemGroup>
